<resources>
    <string name="app_name">RSUG</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="gunadarma_university">Gunadarma University</string>
    <string name="rsug">RSUG</string>
    <string name="sign_in">Masuk</string>
    <string name="hospitalization">Rawat Inap</string>
    <string name="polyclinic">Poliklinik</string>
    <string name="doctor">Dokter</string>
    <string name="profile">Profil</string>
    <string name="date_of_brith">Tanggal Lahir</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="nickname">Nama Panggilan</string>
    <string name="address">Alamat</string>
    <string name="medical_check">Periksa</string>
    <string name="greeting">Selamat Datang di Rumah Sakit Universitas Gunadarma!</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="men">Pria</string>
    <string name="women">Wanita</string>
    <string name="blood_type">Gologan Darah</string>
    <string name="old">Umur</string>
    <string name="check">Periksa</string>
    <string name="health_assurance">Asuransi Kesehatan</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="nerves_poly">Poli Syaraf</string>
    <string name="lungs_poly">Poli Paru</string>
    <string name="skin_poly">Poli Kulit dan Kelamin</string>
    <string name="midwifery_poly">Poli Kebidanan</string>
    <string name="eye_poly">Poli Mata</string>
    <string name="neurosurgery_poly">Poli Bedah Saraf</string>
    <string name="plastic_surgery_poly">Poli Bedah Plastik</string>
    <string name="general_surgery_poly">Poli Bedah Umum</string>
    <string name="child_poly">Poli Anak</string>
    <string name="height">Tinggi Badan</string>
    <string name="weight">Berat Badan</string>
    <string name="target_poly">Poliklinik Tujuan Pemeriksaan</string>
    <string name="judul_artikel">Judul artikel</string>
    <string name="detail_artikel">detail artikel</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detail">Detail</string>
    <string name="doctor_name">Nama Dokter</string>

    <string name="title_activity_doctor_list">List dokter</string>
    <string name="my_name">Spongebob</string>
    <string name="periksa">Periksa</string>
    <string name="demam_berdarah">: Demam Berdarah</string>
    <string name="penyakit">Penyakit</string>
    <string name="kelas_vip">: Kelas VIP</string>
    <string name="tipe_kelas">Tipe Kelas</string>
    <string name="_20_january_2021">: 20 January 2021</string>
    <string name="tanggal_keluar">Tanggal Keluar</string>
    <string name="_10_january_2021">: 10 January 2021</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="rawat_inap">: Rawat Inap</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="riwayat_berobat">Riwayat Berobat</string>
    <string name="alamat">Jl. Margonda Raya No.100, Depok, Jawa Barat</string>
    <string name="gol_darah">A+</string>
    <string name="email_dummy">spongebob@google.com</string>
    <string name="status">Status</string>
    <string name="pasien">Pasien</string>
    <string name="next">next</string>
    <string name="menu_1">Menu 1</string>
    <string name="detail_pasien">Detail Pasien</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="rumah_sakit_alamat">Gg. H. Muin No.97, Cimanggis, Depok, Jawa Barat</string>
    <string name="universitas_gunadarma">Universitas Gunadarma</string>
    <string name="divider">-----------------------------------</string>
    <string name="nomor_antrian">Nomor Antrian</string>
    <string name="nomor_antrian_dummy">A - 023</string>
    <string name="tujuan_pendaftaran">Tujuan: Pendaftaran</string>
    <string name="tanggal_pendaftaran">Rabu, 20 April 2022 ~ 08:09</string>
    <string name="waiting_text">Silakan menunggu nomor Anda dipanggil</string>
    <string name="rumah_sakit_telp">Telp. 021-5668289, 021-5668281</string>
    <string name="logout">Keluar dari akun</string>
</resources>