<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:textSize="20sp"
        android:text="@string/greeting"
        android:layout_marginHorizontal="30dp" />
    <Button
        android:id="@+id/btn_move_activity_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/profile"/>

    <Button
        android:id="@+id/btn_move_activity_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/doctor" />

    <Button
        android:id="@+id/btn_move_activity_poly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/polyclinic" />

    <Button
        android:id="@+id/btn_move_activity_medical_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/medical_check" />

    <Button
        android:id="@+id/btn_move_activity_hospitalization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/hospitalization" />

    <Button
        android:id="@+id/btn_move_activity_blog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/hospitalization" />

</LinearLayout>