<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicalCheckActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/edt_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/edt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood_type"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/edt_blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="30dp"
            android:text="Keluhan Penyakit" />

        <EditText
            android:id="@+id/edt_complaints_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/target_poly" />

        <Spinner
            android:id="@+id/spin_poly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginHorizontal="30dp"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/payment_method" />

        <RadioGroup
            android:id="@+id/rg_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp">

            <RadioButton
                android:id="@+id/rb_payment_cash"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/rb_payment_assurance"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:text="@string/health_assurance" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/check" />

    </LinearLayout>
</ScrollView>