<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
<!--    <FrameLayout-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_width="match_parent"-->
<!--        android:id="@+id/fragment_container" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rsug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rsug"
            android:layout_marginTop="50dp"
            android:textSize="130sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rs_gunadarma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gunadarma_university"
            android:layout_marginTop="-20dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView

            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:lines="1" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_margin="30dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_move_activity_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/register" />

    </LinearLayout>

</ScrollView>